Opened 5 years ago
Closed 5 years ago
#16119 closed bug (fixed)
Notifications: missing pluralization
Reported by: | KapiX | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Preferences/Notifications | Version: | R1/Development |
Keywords: | i18n | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Change History (4)
comment:1 by , 5 years ago
comment:2 by , 5 years ago
Never mind, I just read your explanation of Polish plurals in another bug. I was not aware of that.
comment:3 by , 5 years ago
In English, yes, but other languages have more complex rules. For example in Polish numbers ending in 2,3,4 have different plural than those ending in 5-9: https://unicode-org.github.io/cldr-staging/charts/37/supplemental/language_plural_rules.html#pl
comment:4 by , 5 years ago
Milestone: | Unscheduled → R1/beta3 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed with hrev54331
Note:
See TracTickets
for help on using tickets.
Also https://git.haiku-os.org/haiku/tree/src/preferences/notifications/GeneralView.cpp#n364