Notifications prefs: Fixed pluralization

Fixes #16119